[gd_scene load_steps=4 format=2]

[ext_resource path="res://Img/button.png" type="Texture" id=1]
[ext_resource path="res://Script/Bar.gd" type="Script" id=2]
[ext_resource path="res://Font/standard_black.tres" type="DynamicFont" id=3]

[node name="Spliter" type="VSplitContainer"]
anchor_bottom = 1.0
margin_right = 141.0
margin_bottom = -1.0
split_offset = 555
dragger_visibility = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 141.0
margin_bottom = 549.0

[node name="Bar_container" type="VBoxContainer" parent="."]
margin_top = 549.0
margin_right = 141.0
margin_bottom = 599.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time_label" type="Label" parent="Bar_container"]
margin_right = 141.0
margin_bottom = 14.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "39 Y 12 M"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="NinePatchRect" parent="Bar_container"]
margin_top = 18.0
margin_right = 141.0
margin_bottom = 50.0
size_flags_vertical = 3
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 17
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_label" type="Label" parent="Bar_container/Bar"]
margin_left = 79.0
margin_top = -6.0
margin_right = 114.0
margin_bottom = 16.0
rect_rotation = 90.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "ldkd"
max_lines_visible = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Bar_container/Bar/Name_label"]
modulate = Color( 1, 1, 1, 0.615686 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
